--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #MySQL configuration
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+spring.datasource.url=
 spring.datasource.username=root
-spring.datasource.password=vitoroma9513
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
